--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -34,7 +34,7 @@
     align-items:flex-start;
     justify-content: flex-start;
     width: 90%;
-    height: 140px;
+    height: 100%;
     padding: 1.5rem;
     border-radius: 20px;
     margin-bottom: 1.5rem;
@@ -93,7 +93,11 @@
 
 
 @media (min-width: 992px) and (max-width: 1380px) {
-
+    .education-card {
+        padding: 1rem;
+        margin-bottom: 1.5rem;
+        height: fit-content;
+    }
 }
 
 
@@ -113,6 +117,7 @@
     }
     .education-card {
         width: 100%;
+        height: fit-content;
         padding: 1.5rem;
         margin-bottom: 1.5rem;
     }
@@ -130,7 +135,7 @@
     .education-card {
         padding: 1rem;
         margin-bottom: 1.5rem;
-        height: 130px;
+        height: fit-content;
     }
     .educard-img {
         border-radius: 50%;
@@ -161,18 +166,35 @@
     .education-description > h1{
         font-size: 2.5rem;
     }
+    .education-card {
+        padding: 1rem;
+        margin-bottom: 1.5rem;
+        height: fit-content;
+    }
 }
 
 @media screen and (max-width: 400px) {
-
+    .education-card {
+        padding: 1rem;
+        margin-bottom: 1.5rem;
+        height: fit-content;
+    }
 }
   
 @media only screen and (min-device-width: 320px) and (max-device-width: 
   480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) {
-
+    .education-card {
+        padding: 1rem;
+        margin-bottom: 1.5rem;
+        height: fit-content;
+    }
 }
 
 
 @media only screen and (device-width: 768px) {
-
+    .education-card {
+        padding: 1rem;
+        margin-bottom: 1.5rem;
+        height: fit-content;
+    }
 }
