--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -33,7 +33,7 @@
     align-items:flex-start;
     justify-content: flex-start;
     width: 90%;
-    height: 140px;
+    height: 100%;
     padding: 1.5rem;
     border-radius: 20px;
     margin-bottom: 1.5rem;
@@ -98,7 +98,11 @@
 
 
 @media (min-width: 992px) and (max-width: 1380px) {
-
+    .experience-card {
+        padding: 1rem;
+        margin-bottom: 1.5rem;
+        height: 100%;
+    }
 }
 
 
@@ -118,6 +122,7 @@
     }
     .experience-card {
         width: 100%;
+        height: 100%;
         padding: 1.5rem;
         margin-bottom: 1.5rem;
     }
@@ -135,7 +140,7 @@
     .experience-card {
         padding: 1rem;
         margin-bottom: 1.5rem;
-        height: 130px;
+        height: 100%;
     }
     .expcard-img {
         border-radius: 50%;
@@ -163,21 +168,38 @@
 }
 
 @media screen and (max-width: 600px) {
+    .experience-card {
+        padding: 1rem;
+        margin-bottom: 1.5rem;
+        height: 100%;
+    }
     .experience-description > h1{
         font-size: 2.5rem;
     }
 }
 
 @media screen and (max-width: 400px) {
-
+    .experience-card {
+        padding: 1rem;
+        margin-bottom: 1.5rem;
+        height: 100%;
+    }
 }
   
 @media only screen and (min-device-width: 320px) and (max-device-width: 
   480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) {
-
+    .experience-card {
+        padding: 1rem;
+        margin-bottom: 1.5rem;
+        height: 100%;
+    }
 }
 
 
 @media only screen and (device-width: 768px) {
-
+    .experience-card {
+        padding: 1rem;
+        margin-bottom: 1.5rem;
+        height: 100%;
+    }
 }
